add new changes to exercices

--- a/src/app/contador/hijo/hijo.component.html
+++ b/src/app/contador/hijo/hijo.component.html
@@ -11,4 +11,4 @@
 
 <hr>
 
-<app-nieto [contador]="contador" (actualizarContador)="actualizarContador($event)" ></app-nieto>
+<app-nieto ></app-nieto>
