--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,10 +15,9 @@
 </div>
 
 <hr>
-<!--
+
 <div class="row text-center">
   <div class="col">
-    <app-hijo [contador]="contador" (cambioContador)="cambioContador($event)" ></app-hijo>
+    <app-hijo ></app-hijo>
   </div>
 </div>
--->
